<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="DUT_SERVER_SKILL_INPUT" Id="{8274d7ef-350a-4123-806e-4257fa9c51ed}">
    <Declaration><![CDATA[TYPE DUT_SERVER_SKILL_INPUT :
STRUCT
	///Range of parameters
	ParameterInput: DUT_SERVER_PARAMETERINPUTARRAY;
	///Start process
	Execute: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>